# pro-figure-gazprom

./: .gitignore  Dockerfile  README.md  alembic.ini  config.toml  docker-compose.yaml  pyproject.toml  requirements.txt  start.bat
env/: __init__.py  env_config.py
src/ai/: chutes.py
src/backend/: app.py  dependencies.py  utils.py
src/backend/api/: __init__.py  auth.py
src/domain/: base_exception.py
src/postgre/: engine.py  models.py
src/postgre/alembic/: env.py
src/postgre/constant/: __init__.py  __main__.py  permission.py  role.py  role_permission.py  texts.py
src/postgre/repository/: __init__.py  gameweek_repository.py  goat_boost_repository.py  goat_gameweek_repository.py  goat_pick_repository.py  league_extended_repository.py  league_h2h_exp_repository.py  league_repository.py  match_bps_repository.py  match_repository.py  player_repository.py  team_achievement_repository.py  team_repository.py  user_goat_repository.py  user_league_repository.py  user_reminder_repository.py  user_repository.py  user_team_exp_repository.py  user_team_repository.py
src/postgre_module/: __init__.py  alembic.ini  downgrade.bat  engine.py  migrate.bat  models.py  prod_alembic.ini
src/postgre_module/alembic/: env.py
src/postgre_module/constant/: __init__.py  __main__.py  achievements.py  achivements.py  enums.py  (+2 more)
src/pro_figure_gazprom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/redis/: __init__.py  ping.py
src/redis_module/: models.py  pool.py  repository.py  service.py
src/s3_storage/: engine.py
src/settings/: __init__.py  env_config.py
(+34 files in other folders)
