[project]
name = "pro-figure-gazprom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "fastapi-controllers>=0.3.0",
    "fastapi[all]>=0.115.12",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["postgre_module", "redis_module", "backend"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
